trunk/Archive/c65ffe13c24b5caa6f1ecdd8ff17684d-9ed7c815abc680c1206ac401fbd99c16/output
main.cpp:1:1: error: expected unqualified-id before 'if'
 if (_dir->Instance()->isDebug()) {
 ^
